--- a/namaste/namaste_app/templates/deep_massage.html
+++ b/namaste/namaste_app/templates/deep_massage.html
@@ -37,13 +37,12 @@
 				<div class="col-md-8">
 					<div class="service-details">
 						<h3>Duración: 45 Min - 1 Hora<br>$55 - $70</h3>
-						<p>Tiene como fin aliviar la tensión severa de las estructuras de los tejidos más profundos. Esta terapia se recomienda para personas que experimentan dolores constantes; rigidez, atletas, pacientes con lesiones físicas o contracturas severas.</p>
+						<p>Tiene como fin aliviar la tensión severa de las estructuras de los tejidos más profundos. </p>
+						<p>Esta terapia se recomienda para personas que experimentan dolores constantes; rigidez, atletas, pacientes con lesiones físicas o contracturas severas.</p>
 						<h3>Beneficios</h3>
 						<ul>
 							<li><b>Alivio de la Tensión Severa:</b> Perfecto para deshacer los nudos musculares y reducir la rigidez en áreas críticas.</li>
-							<br><br>
 							<li><b>Recuperación Acelerada:</b> Ideal para atletas o cualquier persona que sufra de lesiones crónicas o agudas.</li>
-							<br><br>
 							<li><b>Mejora la Circulación y Flexibilidad:</b> Fomenta una mejor circulación sanguínea y aumenta la flexibilidad, ayudando a prevenir futuras lesiones.</li>
 						</ul>
 					</div>
@@ -58,7 +57,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
-						<h2><span>You may also like</span></h2>
+						<h2><span>Te Podria Gustar</span></h2>
 					</div>
 				</div>
 			</div>
@@ -66,12 +65,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'mesoterapia' %}"><img src="/static/img/namaste/mesotherapy (1).jpg" alt=""></a>
+							<a href="{% url 'waxing' %}"><img src="/static/img/namaste/waxing.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'mesoterapia' %}">Mesoterapia</a></h3>
-							<p>Con sesiones rápidas y sin dolor, nuestra mesoterapia no invasiva es perfecta para combatir la celulitis, mejorar la firmeza de la piel y rejuvenecer tu apariencia sin tiempo de inactividad.</p>
-							<a href="{% url 'mesoterapia' %}" class="btn btn-default">Leer Mas</a>
+							<h3><a href="{% url 'waxing' %}">Depilación</a></h3>
+							<p>Disfruta de una piel suave y sin vello con nuestros servicios profesionales de depilación con cera.</p>
+							<a href="{% url 'waxing' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
