--- a/namaste/namaste_app/templates/gold_detox.html
+++ b/namaste/namaste_app/templates/gold_detox.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %} - Detox De Oro {% endblock %}
+{% extends "base.html" %} {% block title %} - Gold Detox {% endblock %}
 {% load widget_tweaks %}
 {% block content %}
 
@@ -7,10 +7,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1>Detox De Oro</h1>
+						<h1>Gold Detox</h1>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-							<li class="breadcrumb-item active">Detox De Oro</li>
+							<li class="breadcrumb-item active">Gold Detox</li>
 						</ol>
 					</div>
 				</div>
@@ -28,7 +28,7 @@
 							<a href="{% url 'detox-oro' %}"><img src="/static/img/namaste/golden_detox.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'detox-oro' %}">Detox De Oro</a></h3>
+							<h3><a href="{% url 'detox-oro' %}">Gold Detox</a></h3>
 							<p>Técnica creada en Colombia la cual consiste y tiene como función principal desintoxicar, desinflamar, y moldear con un buen drenaje.</p>
 							<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reserva Ahora</a>
 						</div>
@@ -37,7 +37,7 @@
 				<div class="col-md-8">
 					<div class="service-details">
 						<h3>Por cada 1/6 Secciones<br>$65</h3>
-						<p>Con el Detox de Oro logramos estimular todos los puntos y campos energéticos, facilitando la circulación de líquidos que, en conjunto, forman parte del sistema linfático.</p>
+						<p>Con el Gold Detox logramos estimular todos los puntos y campos energéticos, facilitando la circulación de líquidos que, en conjunto, forman parte del sistema linfático.</p>
 						<h3>Con este tratamiento logramos:</h3>
 						<ul>
 							<li>Mantener el equilibrio estimular del organismo</li>
@@ -77,7 +77,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drainage (1).jpg" alt=""></a>
+							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drenaje.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'drenaje' %}">Drenaje Linfático</a></h3>
