--- a/namaste/namaste_app/templates/index.html
+++ b/namaste/namaste_app/templates/index.html
@@ -41,7 +41,10 @@
 				<div class="col-md-12">
 					<div class="section-title text-center">
 						<h2><span>Bienvenidos a Namasté</span></h2>
-						<p>Donde el arte del masaje se fusiona con la pasión por el bienestar físico y mental de cada cliente. Permítanos llevarte en un recorrido a través de nuestra historia, donde cada palabra cuenta una etapa de transformación, superación y amor.</p>
+						<p>Donde el arte del masaje se fusiona con la pasión por el bienestar físico y mental de cada cliente. </p>
+						<p>Permítanos llevarte en un recorrido a través de nuestra historia, donde cada palabra cuenta una etapa de transformación, superación y amor.</p>
+						<br>
+						<img src="/static/img/namaste/icons8-buddha-64.png">
 					</div>
 				</div>
 			</div>
@@ -50,7 +53,7 @@
 
     <!-- end intro message -->
 	
-	<section class="section-spacing">
+	<section class="section-spacing inverse-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -109,7 +112,7 @@
 	</section>
 	<!-- end services -->
 	
-	<section class="section-spacing inverse-bg">
+	<section class="section-spacing">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-6">
@@ -124,9 +127,8 @@
 					<div class="text-block wow fadeIn">
                         <p>Disfruta de Nuestros Tratamientos</p>
 						<h2>REVITALIZA TU MENTE, CUERPO Y ESPÍRITU</h2>
-                        <p>
-                            Descubre la verdadera relajación con nuestros tratamientos indulgentes, meticulosamente diseñados para disipar la tensión y restaurar el equilibrio en tu mente, cuerpo y espíritu. Desde nuestros lujosos masajes suizos hasta nuestras sesiones de desintoxicación dorada rejuvenecedoras, cada tratamiento está adaptado para dejarte sintiéndote refrescado, revitalizado y renovado.
-                        </p>
+                        <p>Descubre la verdadera relajación con nuestros tratamientos indulgentes, meticulosamente diseñados para disipar la tensión y restaurar el equilibrio en tu mente, cuerpo y espíritu. </p>
+						<p>Desde nuestros lujosos masajes suizos hasta nuestras sesiones de desintoxicación dorada rejuvenecedoras, cada tratamiento está adaptado para dejarte sintiéndote refrescado, revitalizado y renovado.</p>
 					</div>
 				</div>
 			</div>
@@ -134,7 +136,7 @@
 	</section>
 	<!-- end why choose -->
 
-    <section class="section-spacing">
+    <section class="section-spacing inverse-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -193,7 +195,7 @@
 	</section>
 	<!-- end treatments -->
 	
-	<section class="section-spacing">
+	<!--TODO:DELETE OR KEEP <section class="section-spacing">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -263,10 +265,10 @@
 				</div>
 			</div>			
 		</div>
-	</section>
+	</section> -->
 	<!-- end pricing -->
 	
-	<section class="section-spacing inverse-bg">
+	<!--TODO: Delete or keep <section class="section-spacing inverse-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -355,31 +357,12 @@
 				</div>
 			</div>			
 		</div>
-	</section>
+	</section> -->
 	<!-- end gallery -->
 	
-	<section class="section-spacing">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-6">
-					<div class="appoinment-text wow fadeIn">
-						<h2>Make an Appointment?</h2>
-						<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos, In massa urna pellentesque habitant morbi tristique senectus.</p>
-						<p>Call us : 002-6666-8888 or fill out our online booking & equiry form and we’ll contact you.</p>
-						<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-primary">Make Appointment</a>
-					</div>
-				</div>
-				<div class="col-md-6">
-					<div class="appoinment-img text-md-right text-center wow fadeIn">
-						<img class="tilt-img" src="/static/img/namaste/calendar.jpg" alt="">
-					</div>
-				</div>
-			</div>			
-		</div>
-	</section>
-	<!-- end appointment -->
 	
-	<section class="section-spacing inverse-bg">
+	
+	<section class="section-spacing">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -488,7 +471,7 @@
 	</section>
 	<!-- end team member -->
 	
-	<section class="section-spacing">
+	<!--TODO: Delete or keep in code <section class="section-spacing">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-md-6">
@@ -526,7 +509,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- end fun facts -->
 	
 	<section class="section-spacing inverse-bg">
@@ -613,6 +596,27 @@
 		</div>
 	</section>
 	<!-- end team testimonials -->
+
+	<section class="section-spacing">
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col-md-6">
+					<div class="appoinment-text wow fadeIn">
+						<h2>Make an Appointment?</h2>
+						<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos, In massa urna pellentesque habitant morbi tristique senectus.</p>
+						<p>Call us : 002-6666-8888 or fill out our online booking & equiry form and we’ll contact you.</p>
+						<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-primary">Make Appointment</a>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="appoinment-img text-md-right text-center wow fadeIn">
+						<img class="tilt-img" src="/static/img/namaste/calendar.jpg" alt="">
+					</div>
+				</div>
+			</div>			
+		</div>
+	</section>
+	<!-- end appointment -->
 	
 	<!-- Start Video Modal -->
 	<div class="modal fade modal-vcenter" id="video-modal" role="dialog">
