--- a/namaste/namaste_app/templates/massage_pistol.html
+++ b/namaste/namaste_app/templates/massage_pistol.html
@@ -37,7 +37,8 @@
 				<div class="col-md-8">
 					<div class="service-details">
 						<h3>Por área:<br>$5</h3>
-						<p>Esta herramienta innovadora está diseñada para proporcionar alivio rápido y efectivo de la tensión muscular, mejorar la circulación y acelerar el proceso de recuperación. Ideal para deportistas y personas con estilos de vida activos o que sufren de dolores crónicos</p>
+						<p>Esta herramienta innovadora está diseñada para proporcionar alivio rápido y efectivo de la tensión muscular, mejorar la circulación y acelerar el proceso de recuperación. </p>
+						<p>Ideal para deportistas y personas con estilos de vida activos o que sufren de dolores crónicos.</p>
 						<h3>Beneficios</h3>
 						<ul>
 							<li><b>Recuperación Muscular Acelerada:</b> Ayuda a reducir la rigidez y el dolor después de ejercicios intensos o jornadas largas.</li>
