--- a/namaste/namaste_app/templates/massage_therapy.html
+++ b/namaste/namaste_app/templates/massage_therapy.html
@@ -41,9 +41,7 @@
 						<h3>Beneficios</h3>
 						<ul>
 							<li><b>Alivio del Dolor y la Tensión:</b> Reduce el dolor muscular y mejora la flexibilidad.</li>
-							<br><br>
 							<li><b>Mejora la Circulación:</b> Promueve una mejor circulación sanguínea, lo que facilita una mayor oxigenación y nutrición de los tejidos.</li>
-							<br><br>
 							<li><b>Relajación Mental y Emocional:</b> Contribuye a una mejor salud mental, ayudando a reducir los síntomas de ansiedad y depresión.</li>
 						</ul>
 					</div>
@@ -66,7 +64,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drainage (1).jpg" alt=""></a>
+							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drenaje.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'drenaje' %}">Drenaje Linfático</a></h3>
@@ -82,7 +80,7 @@
 							<a href="{% url 'terapia-madera' %}"><img src="/static/img/namaste/wood_therapy.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'terapia-madera' %}">Terapia De Madera</a></h3>
+							<h3><a href="{% url 'terapia-madera' %}">Maderoterapia</a></h3>
 							<p>Nuestra terapia de madera, una técnica ancestral que utiliza instrumentos de madera natural para estimular la circulación, reducir la celulitis y tonificar la piel.</p>
 							<a href="{% url 'terapia-madera' %}" class="btn btn-default">Leer Mas</a>
 						</div>
@@ -95,7 +93,7 @@
 							<a href="{% url 'terapia-metal' %}"><img src="/static/img/namaste/metal_therapy_re.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'terapia-metal' %}">Terapia De Metal</a></h3>
+							<h3><a href="{% url 'terapia-metal' %}">Metaloterapia</a></h3>
 							<p>El metal se desliza suavemente sobre la piel, liberando la tensión muscular, mejorando la circulación y promoviendo una sensación de bienestar profundo.</p>
 							<a href="{% url 'terapia-metal' %}" class="btn btn-default">Leer Mas</a>
 						</div>
