--- a/namaste/namaste_app/templates/metal_therapy.html
+++ b/namaste/namaste_app/templates/metal_therapy.html
@@ -40,13 +40,12 @@
 				<div class="col-md-8">
 					<div class="service-details">
 						<h3>Por área:<br>$50</h3>
-						<p>Metaloterapia utiliza herramientas especialmente diseñadas de diferentes metales para aplicar presión y calor sobre el cuerpo. Esta combinación ayuda a liberar tensiones musculares, mejorar la circulación y promover un estado de relajación total.</p>
+						<p>Metaloterapia utiliza herramientas especialmente diseñadas de diferentes metales para aplicar presión y calor sobre el cuerpo. </p>
+						<p>Esta combinación ayuda a liberar tensiones musculares, mejorar la circulación y promover un estado de relajación total.</p>
 						<h3>Beneficios</h3>
 						<ul>
 							<li><b>Alivio Profundo de la Tensión Muscular:</b> El uso de metales calientes facilita la liberación de nudos y tensiones profundas.</li>
-							<br><br>
 							<li><b>Mejora la Circulación y Desintoxicación:</b> El calor de los metales promueve una mejor circulación sanguínea y ayuda a eliminar toxinas del cuerpo.</li>
-							<br><br>
 							<li><b>Relajación y Bienestar General:</b> La terapia con metales proporciona una relajación profunda, mejorando tu bienestar emocional y físico.</li>
 						</ul>
 					</div>
@@ -69,7 +68,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drainage (1).jpg" alt=""></a>
+							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drenaje.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'drenaje' %}">Drenaje Linfático</a></h3>
