--- a/namaste/namaste_app/templates/post_op.html
+++ b/namaste/namaste_app/templates/post_op.html
@@ -37,13 +37,12 @@
 				<div class="col-md-8">
 					<div class="service-details">
 						<h3>Por área<br>$60</h3>
-						<p>Entendemos que la recuperación después de una cirugía puede ser un proceso tanto físico como emocional. Por eso, ofrecemos servicios especializados de masajes postoperatorios para ayudarte a recuperar tu movilidad y aliviar el dolor de manera segura y efectiva.</p>
+						<p>Entendemos que la recuperación después de una cirugía puede ser un proceso tanto físico como emocional. </p>
+						<p>Por eso, ofrecemos servicios especializados de masajes postoperatorios para ayudarte a recuperar tu movilidad y aliviar el dolor de manera segura y efectiva.</p>
 						<h3>Beneficios</h3>
 						<ul>
 							<li><b>Reducción de Inflamación y Dolor:</b> Nuestras técnicas especializadas ayudan a disminuir la inflamación y a manejar el dolor postquirúrgico.</li>
-							<br><br>
 							<li><b>Mejora de la Circulación:</b> Estimula el flujo sanguíneo, lo que es esencial para una recuperación más rápida y eficiente.</li>
-							<br><br>
 							<li><b>Favorece la Cicatrización:</b> Ayuda a mejorar la apariencia de las cicatrices y a acelerar el proceso de cicatrización.</li>
 						</ul>
 					</div>
