--- a/namaste/namaste_app/templates/swedish_massage.html
+++ b/namaste/namaste_app/templates/swedish_massage.html
@@ -37,13 +37,12 @@
 				<div class="col-md-8">
 					<div class="service-details">
 						<h3>Duración: 1 Hora<br>$65</h3>
-						<p>Nuestro servicio de masaje sueco está diseñado para aliviar el estrés, promover la relajación y mejorar la circulación. Experimenta la tranquilidad y el rejuvenecimiento con cada sesión, personalizada para atender tus necesidades específicas.</p>
+						<p>Nuestro servicio de masaje sueco está diseñado para aliviar el estrés, promover la relajación y mejorar la circulación. </p>
+						<p>Experimenta la tranquilidad y el rejuvenecimiento con cada sesión, personalizada para atender tus necesidades específicas.</p>
 						<h3>Beneficios</h3>
 						<ul>
 							<li><b>Relajación Profunda:</b> Libérate del estrés del día a día y sumérgete en una paz total.</li>
-							<br><br>
 							<li><b>Mejora la Circulación:</b> Estimula el flujo sanguíneo y promueve la salud cardiovascular.</li>
-							<br><br>
 							<li><b>Alivia Dolores Musculares:</b> Ideal para suavizar tensiones y dolores, mejorando tu flexibilidad y movilidad.</li>
 						</ul>
 					</div>
@@ -66,12 +65,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'mesoterapia' %}"><img src="/static/img/namaste/mesotherapy (1).jpg" alt=""></a>
+							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'mesoterapia' %}">Mesoterapia</a></h3>
-							<p>Con sesiones rápidas y sin dolor, nuestra mesoterapia no invasiva es perfecta para combatir la celulitis, mejorar la firmeza de la piel y rejuvenecer tu apariencia sin tiempo de inactividad.</p>
-							<a href="{% url 'mesoterapia' %}" class="btn btn-default">Leer Mas</a>
+							<h3><a href="{% url 'vacuslim' %}">Vacuslim-48</a></h3>
+							<p>Nuestro tratamiento de Vacuslim combina la succión controlada con masajes terapéuticos para estimular la circulación, reducir la celulitis y mejorar la firmeza de la piel.</p>
+							<a href="{% url 'vacuslim' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -79,7 +78,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drainage (1).jpg" alt=""></a>
+							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drenaje.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'drenaje' %}">Drenaje Linfático</a></h3>
