--- a/namaste/namaste_app/templates/wood_therapy.html
+++ b/namaste/namaste_app/templates/wood_therapy.html
@@ -40,15 +40,10 @@
 						<p>Es un masaje indoloroso, que se lleva a cabo con artefactos de madera con el fin de lograr los siguientes beneficios:</p>
 						<ul>
 							<li>Tonificar</li>
-							<br>
 							<li>Reafirmar</li>
-							<br>
 							<li>Moldear</li>
-							<br>
 							<li>Activar la circulación sanguínea y linfática.</li>
-							<br>
 							<li>Activar la producción de colágeno y elastina.</li>
-							<br>
 							<li>Eliminar líneas de expresión.</li>
 						</ul>
 					</div>
@@ -71,7 +66,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drainage (1).jpg" alt=""></a>
+							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drenaje.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'drenaje' %}">Drenaje Linfático</a></h3>
