--- a/namaste/namaste_app/templates/prenatal.html
+++ b/namaste/namaste_app/templates/prenatal.html
@@ -37,13 +37,12 @@
 				<div class="col-md-8">
 					<div class="service-details">
 						<h3>Duración: 1 Hora<br>$65</h3>
-						<p>En Namaste, sabemos que el embarazo es una etapa única y especial. Ofrecemos masajes prenatales diseñados específicamente para futuras mamás, proporcionando alivio y relajación en un ambiente seguro y confortable.</p>
+						<p>En Namaste, sabemos que el embarazo es una etapa única y especial. </p>
+						<p>Ofrecemos masajes prenatales diseñados específicamente para futuras mamás, proporcionando alivio y relajación en un ambiente seguro y confortable.</p>
 						<h3>Beneficios</h3>
 						<ul>
 							<li><b>Alivio del Dolor de Espalda y Caderas:</b> Nuestros masajes ayudan a reducir las molestias comunes en estas áreas debido a los cambios posturales durante el embarazo.</li>
-							<br><br>
 							<li><b>Reducción del Estrés y la Ansiedad:</b> Un momento de calma para ti y tu bebé, mejorando tu estado de ánimo y bienestar general.</li>
-							<br><br>
 							<li><b>Mejora de la Circulación:</b> Favorece el retorno venoso, importante para evitar la hinchazón de piernas y pies.</li>
 						</ul>
 					</div>
@@ -66,7 +65,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drainage (1).jpg" alt=""></a>
+							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drenaje.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'drenaje' %}">Drenaje Linfático</a></h3>
@@ -82,7 +81,7 @@
 							<a href="{% url 'terapia-madera' %}"><img src="/static/img/namaste/wood_therapy.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'terapia-madera' %}">Terapia De Madera</a></h3>
+							<h3><a href="{% url 'terapia-madera' %}">Maderoterapia</a></h3>
 							<p>Nuestra terapia de madera, una técnica ancestral que utiliza instrumentos de madera natural para estimular la circulación, reducir la celulitis y tonificar la piel.</p>
 							<a href="{% url 'terapia-madera' %}" class="btn btn-default">Leer Mas</a>
 						</div>
@@ -92,10 +91,10 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'terapia-metal' %}"><img src="/static/img/namaste/metal_therapy.jpg" alt=""></a>
+							<a href="{% url 'terapia-metal' %}"><img src="/static/img/namaste/metal_therapy_re.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'terapia-metal' %}">Terapia De Metal</a></h3>
+							<h3><a href="{% url 'terapia-metal' %}">Metaloterapia</a></h3>
 							<p>El metal se desliza suavemente sobre la piel, liberando la tensión muscular, mejorando la circulación y promoviendo una sensación de bienestar profundo.</p>
 							<a href="{% url 'terapia-metal' %}" class="btn btn-default">Leer Mas</a>
 						</div>
