--- a/namaste/namaste_app/templates/waxing.html
+++ b/namaste/namaste_app/templates/waxing.html
@@ -37,7 +37,8 @@
 				<div class="col-md-8">
 					<div class="service-details">
 						<h3>Duración: Depende el área<br>$10 - $65 +</h3>
-						<p>Ofrecemos una experiencia de depilación excepcional que garantiza resultados impresionantes y duraderos. Nuestro enfoque es proporcionar un servicio seguro, higiénico y lo más cómodo posible, utilizando productos de la más alta calidad.</p>
+						<p>Ofrecemos una experiencia de depilación excepcional que garantiza resultados impresionantes y duraderos. </p>
+						<p>Nuestro enfoque es proporcionar un servicio seguro, higiénico y lo más cómodo posible, utilizando productos de la más alta calidad.</p>
 						<h3>Beneficios</h3>
 						<ul>
 							<li><b>Piel más Suave y Limpia:</b> La cera elimina el vello y las células muertas de la piel, dejando una superficie ultra suave.</li>
@@ -82,7 +83,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drainage (1).jpg" alt=""></a>
+							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drenaje.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'drenaje' %}">Drenaje Linfático</a></h3>
@@ -98,7 +99,7 @@
 							<a href="{% url 'terapia-madera' %}"><img src="/static/img/namaste/wood_therapy.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'terapia-madera' %}">Terapia De Madera</a></h3>
+							<h3><a href="{% url 'terapia-madera' %}">Maderoterapia</a></h3>
 							<p>Nuestra terapia de madera, una técnica ancestral que utiliza instrumentos de madera natural para estimular la circulación, reducir la celulitis y tonificar la piel.</p>
 							<a href="{% url 'terapia-madera' %}" class="btn btn-default">Leer Mas</a>
 						</div>
@@ -111,7 +112,7 @@
 							<a href="{% url 'terapia-metal' %}"><img src="/static/img/namaste/metal_therapy_re.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'terapia-metal' %}">Terapia De Metal</a></h3>
+							<h3><a href="{% url 'terapia-metal' %}">Metaloterapia</a></h3>
 							<p>El metal se desliza suavemente sobre la piel, liberando la tensión muscular, mejorando la circulación y promoviendo una sensación de bienestar profundo.</p>
 							<a href="{% url 'terapia-metal' %}" class="btn btn-default">Leer Mas</a>
 						</div>
