Adding lipolaser and vacumtherapy pages. Also bug fixes and GUI fixes

--- a/namaste/namaste_app/templates/services.html
+++ b/namaste/namaste_app/templates/services.html
@@ -199,6 +199,46 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'maderoterapia-facial' %}"><img src="/static/img/namaste/maderoterapia_facial.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'maderoterapia-facial' %}">Maderoterapia Facial</a></h3>
+							<p>Esta técnica ancestral, combinada con modernas prácticas de bienestar, utiliza instrumentos de madera especialmente diseñados para estimular y tonificar la piel del rostro, promoviendo un aspecto más juvenil y radiante.</p>
+							<a href="{% url 'maderoterapia-facial' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'lipolaser' %}"><img src="/static/img/namaste/lipolaser.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'lipolaser' %}">Lipoláser</a></h3>
+							<p>Ofrecemos el revolucionario tratamiento Lipoláser, una solución no invasiva para esculpir el cuerpo y reducir la grasa localizada.</p>
+							<a href="{% url 'lipolaser' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'vacumterapia' %}"><img src="/static/img/namaste/vacuterapia.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'vacumterapia' %}">Vacumterapia</a></h3>
+							<p>Ayuda a mejorar la apariencia natural del glúteo, eliminando la apariencia de la celulitis primer nivel.</p>
+							<a href="{% url 'vacumterapia' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">
