--- a/namaste/namaste_app/templates/vacumterapia.html
+++ b/namaste/namaste_app/templates/vacumterapia.html
@@ -1,16 +1,16 @@
-{% extends "base.html" %} {% block title %} - Vacuslim-48 {% endblock %}
+{% extends "base.html" %} {% block title %} - Vacumterapia {% endblock %}
 {% load widget_tweaks %}
 {% block content %}
 
-	<section class="inner-page-banner" style="background-image:url(/static/img/namaste/vacuslim_banner.jpg)">
+	<section class="inner-page-banner" style="background-image:url(/static/img/namaste/vacumterapia_banner.jpg)">
 		<div class="page-banner-caption">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1>Vacuslim-48</h1>
+						<h1>Vacumterapia</h1>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-							<li class="breadcrumb-item active">Vacuslim-48</li>
+							<li class="breadcrumb-item active">Vacumterapia</li>
 						</ol>
 					</div>
 				</div>
@@ -25,27 +25,25 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
+							<a href="{% url 'vacumterapia' %}"><img src="/static/img/namaste/vacuterapia.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'vacuslim' %}">Vacuslim-48</a></h3>
-							<p>Nuestro tratamiento de Vacuslim combina la succión controlada con masajes terapéuticos para estimular la circulación, reducir la celulitis y mejorar la firmeza de la piel.</p>
+							<h3><a href="{% url 'vacumterapia' %}">Vacumterapia</a></h3>
+							<p>Ayuda a mejorar la apariencia natural del glúteo, eliminando la apariencia de la celulitis primer nivel.</p>
 							<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reserva Ahora</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-8">
 					<div class="service-details">
-						<h3>Por Tratamiento:<br>$85</h3>
-						<p>Desde Italia llega Vacuslim, un innovador método que integra cinco técnicas eficaces en un solo tratamiento, ofreciendo resultados visibles desde la primera sesión. Este tratamiento es seguro, indoloroso y totalmente no invasivo, ideal para reducir depósitos de grasa y moldear el cuerpo.</p>
-						<p>Es un tratamiento relajante y sin dolor, con una agradable sensación de frío tenue que incrementa la termogénesis y, por lo tanto, un leve consumo de calorías. El efecto de vacío permite una inserción más profunda y uniforme de ingredientes activos para obtener resultados rápidos y duraderos. No interfiere con tus actividades diarias (correr, tomar el sol, nadar).</p>
+						<h3>Duración: 30 min<br>$35</h3>
+						<p>Se emplea mediante aparatos succionadores que movilizan la grasa hacia el sistema linfático.</p>
 						<h3>Beneficios</h3>
 						<ul>
-							<li>Resultados visibles inmediatamente después del primer tratamiento</li>
-							<li>Reducción visible de la celulitis</li>
-							<li>Remodelación corporal no invasiva</li>
-							<li>Reafirmación de la piel</li>
-							<li>Piel suave y elástica con estrías menos visibles</li>
+							<li><b>Moldeado Corporal:</b> Mejora la forma y el tono de tu cuerpo, reduciendo la celulitis y favoreciendo la pérdida de centímetros en áreas problemáticas.</li>
+							<li><b>Levantamiento y Reafirmación:</b> Ideal para reafirmar y levantar glúteos, senos y otras áreas flácidas, proporcionando un aspecto más juvenil y tonificado.</li>
+							<li><b>Mejoramiento de la Circulación Sanguínea:</b> Estimula el flujo sanguíneo, lo que mejora la salud y apariencia de la piel, y contribuye a una mejor eliminación de toxinas.</li>
+							<li><b>Relajación Muscular:</b> Alivia la tensión y el dolor muscular, ofreciendo una experiencia relajante y terapéutica.</li>
 						</ul>
 					</div>
 				</div>
