--- a/namaste/namaste_app/templates/wood_therapy.html
+++ b/namaste/namaste_app/templates/wood_therapy.html
@@ -36,15 +36,15 @@
 				</div>
 				<div class="col-md-8">
 					<div class="service-details">
-						<h3>Duración: 1 hora<br>$50</h3>
-						<p>Es un masaje indoloroso, que se lleva a cabo con artefactos de madera con el fin de lograr los siguientes beneficios:</p>
+						<h3>Por área:<br>$55</h3>
+						<p>La Maderoterapia corporal es una terapia no invasiva, que actúa directamente en el campo energético. Con ella podemos realizar:</p>
 						<ul>
-							<li>Tonificar</li>
-							<li>Reafirmar</li>
-							<li>Moldear</li>
-							<li>Activar la circulación sanguínea y linfática.</li>
-							<li>Activar la producción de colágeno y elastina.</li>
-							<li>Eliminar líneas de expresión.</li>
+							<li>Masajes corporales</li>
+							<li>Tratamientos reductores de grasa</li>
+							<li>Masajes anticeluliticos y reafirmantes</li>
+							<li>Descontractura y relaja los músculos</li>
+							<li>Ayuda adelgazar</li>
+							<li>Moldea el cuerpo</li>
 						</ul>
 					</div>
 				</div>
