--- a/namaste/namaste_app/templates/facial_wood_therapy.html
+++ b/namaste/namaste_app/templates/facial_wood_therapy.html
@@ -1,16 +1,16 @@
-{% extends "base.html" %} {% block title %} - Vacuslim-48 {% endblock %}
+{% extends "base.html" %} {% block title %} - Maderoterapia Facial{% endblock %}
 {% load widget_tweaks %}
 {% block content %}
 
-	<section class="inner-page-banner" style="background-image:url(/static/img/namaste/vacuslim_banner.jpg)">
+	<section class="inner-page-banner" style="background-image:url(/static/img/namaste/wood_therapy_facial.jpg)">
 		<div class="page-banner-caption">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1>Vacuslim-48</h1>
+						<h1>Maderoterapia Facial</h1>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-							<li class="breadcrumb-item active">Vacuslim-48</li>
+							<li class="breadcrumb-item active">Maderoterapia Facial</li>
 						</ol>
 					</div>
 				</div>
@@ -25,27 +25,26 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
+							<a href="{% url 'maderoterapia-facial' %}"><img src="/static/img/namaste/maderoterapia_facial.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'vacuslim' %}">Vacuslim-48</a></h3>
-							<p>Nuestro tratamiento de Vacuslim combina la succión controlada con masajes terapéuticos para estimular la circulación, reducir la celulitis y mejorar la firmeza de la piel.</p>
+							<h3><a href="{% url 'maderoterapia-facial' %}">Maderoterapia Facial</a></h3>
+							<p>Esta técnica ancestral, combinada con modernas prácticas de bienestar, utiliza instrumentos de madera especialmente diseñados para estimular y tonificar la piel del rostro, promoviendo un aspecto más juvenil y radiante.</p>
 							<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reserva Ahora</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-8">
 					<div class="service-details">
-						<h3>Por Tratamiento:<br>$85</h3>
-						<p>Desde Italia llega Vacuslim, un innovador método que integra cinco técnicas eficaces en un solo tratamiento, ofreciendo resultados visibles desde la primera sesión. Este tratamiento es seguro, indoloroso y totalmente no invasivo, ideal para reducir depósitos de grasa y moldear el cuerpo.</p>
-						<p>Es un tratamiento relajante y sin dolor, con una agradable sensación de frío tenue que incrementa la termogénesis y, por lo tanto, un leve consumo de calorías. El efecto de vacío permite una inserción más profunda y uniforme de ingredientes activos para obtener resultados rápidos y duraderos. No interfiere con tus actividades diarias (correr, tomar el sol, nadar).</p>
-						<h3>Beneficios</h3>
+						<h3>Duración: 1 hora<br>$50</h3>
+						<p>Es un masaje indoloroso, que se lleva a cabo con artefactos de madera con el fin de lograr los siguientes beneficios:</p>
 						<ul>
-							<li>Resultados visibles inmediatamente después del primer tratamiento</li>
-							<li>Reducción visible de la celulitis</li>
-							<li>Remodelación corporal no invasiva</li>
-							<li>Reafirmación de la piel</li>
-							<li>Piel suave y elástica con estrías menos visibles</li>
+							<li>Tonificar</li>
+							<li>Reafirmar</li>
+							<li>Moldear</li>
+							<li>Activar la circulación sanguínea y linfática.</li>
+							<li>Activar la producción de colágeno y elastina.</li>
+							<li>Eliminar líneas de expresión.</li>
 						</ul>
 					</div>
 				</div>
@@ -59,7 +58,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
-						<h2><span>Te podria gustar</span></h2>
+						<h2><span>Te Podria Gustar</span></h2>
 					</div>
 				</div>
 			</div>
@@ -80,12 +79,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'terapia-madera' %}"><img src="/static/img/namaste/wood_therapy.jpg" alt=""></a>
+							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'terapia-madera' %}">Maderoterapia</a></h3>
-							<p>Nuestra terapia de madera, una técnica ancestral que utiliza instrumentos de madera natural para estimular la circulación, reducir la celulitis y tonificar la piel.</p>
-							<a href="{% url 'terapia-madera' %}" class="btn btn-default">Leer Mas</a>
+							<h3><a href="{% url 'vacuslim' %}">Vacuslim-48</a></h3>
+							<p>Nuestro tratamiento de Vacuslim combina la succión controlada con masajes terapéuticos para estimular la circulación, reducir la celulitis y mejorar la firmeza de la piel.</p>
+							<a href="{% url 'vacuslim' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -93,12 +92,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'terapia-metal' %}"><img src="/static/img/namaste/metal_therapy_re.jpg" alt=""></a>
+							<a href="{% url 'waxing' %}"><img src="/static/img/namaste/waxing.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'terapia-metal' %}">Metaloterapia</a></h3>
-							<p>El metal se desliza suavemente sobre la piel, liberando la tensión muscular, mejorando la circulación y promoviendo una sensación de bienestar profundo.</p>
-							<a href="{% url 'terapia-metal' %}" class="btn btn-default">Leer Mas</a>
+							<h3><a href="{% url 'waxing' %}">Depilación</a></h3>
+							<p>Disfruta de una piel suave y sin vello con nuestros servicios profesionales de depilación con cera.</p>
+							<a href="{% url 'waxing' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
