More GUI changes and adding LeBody services page

--- a/namaste/namaste_app/templates/services.html
+++ b/namaste/namaste_app/templates/services.html
@@ -239,6 +239,19 @@
 					</div>
 				</div>
 
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'lebody' %}"><img src="/static/img/namaste/lebody.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'lebody' %}">LeBody</a></h3>
+							<p>Contrae los músculos a traves de la estimulación y frecuencia. Nos permite tonificar los músculos y moldear el área.</p>
+							<a href="{% url 'lebody' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">
@@ -254,22 +267,20 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-6">
 					<div class="img-block wow fadeIn">
-						<img src="/static/img/why-choose/1.jpg" alt="">
-						<div class="play-button">
-							<a href="#" data-toggle="modal" data-target="#video-modal"><i class="fa fa-play"></i></a>
-						</div>
+						<img src="/static/img/namaste/namaste_why_us.jpg" alt="">
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-6">
 					<div class="text-block wow fadeIn">
-						<h2>Why Choose us?</h2>
-						<p>Our product is fully personalized and well balanced for all age of customers or adults. We maintain the standards by lorem ipsum and certified by dolor set amet.</p>
+						<h2>Porque Nosotros?</h2>
+						<p>En Namasté, nos dedicamos a proporcionar un servicio excepcional en masajes y tratamientos de piel, entendiendo que cada cliente tiene necesidades únicas. </p>
+						<p>Aquí te mostramos por qué somos la mejor opción para cuidar de tu bienestar físico y estético:</p>
 						<ul>
-							<li>Created from natural herbs</li>
-							<li>100% safe for your skin</li>
-							<li>Unique from other spa treatments</li>
-							<li>Created by medical professionals of spa lab</li>
-							<li>Special gifts & offers for you</li>
+							<li>Experiencia Profesional: Nos mantenemos al día con las últimas técnicas y tratamientos para asegurarnos de que recibas la mejor </li>
+							<li>Ambiente Relajante: Desde el momento en que entras, te sumerges en un ambiente calmante que te prepara para una experiencia de relajación y rejuvenecimiento total.</li>
+							<li>Tratamientos Personalizados: Tras una evaluación detallada, adaptamos cada tratamiento para responder eficazmente a tus expectativas y requerimientos específicos.</li>
+							<li>Resultados Comprobados: Nuestros clientes son nuestra mejor carta de recomendación. La satisfacción y los resultados visibles que ellos experimentan son testimonio de nuestro compromiso con la excelencia.</li>
+							<li>Atención Integral: Además de cuidar de tu piel y cuerpo, nos preocupamos por tu bienestar general. Nuestro enfoque holístico en el cuidado personal te asegura no solo lucir bien, sino sentirte bien en todos los aspectos.</li>
 						</ul>
 					</div>
 				</div>
